* Stop Element#isVisible unit test from failing because IE6 doesn't respect 0px dimensions. [jddalton]

* Fix bugs/typos/unit tests in the Fuse.Ajax classes. [Diego Perini, jddalton]

* Ensure line breaks in the Fuse.Console output display correctly for IE6. [jddalton]

* Cleanup and simplify the Fuse.Console class. [jddalton]

* Minor code cleanup and add missing semicolon to Fuse.Ajax.Responder.register(). [Diego Perini, jddalton]

* Ensure the catch-all of Fuse.Object.hasKey() won't error if the object doesn't have a constructor property. [Garrett Smith, jddalton]

* Rename all occurrences of `.Plugin` to `.plugin`. [jddalton, kangax]

* Rename Fuse.Exception to Fuse.Console and add support Opera and Jaxer consoles. [FuseJS LH #52] [jddalton, Mark Caudill, kangax]

* Remove `strict` flag from the `contains` methods and allow native/sandboxed object instances to match primitive values. [jddalton]

* Remove lingering Fuse.Array#clone dependency from the Fuse.Array#grep addition. [jddalton]

* Fix leaked variable `name` that caused TaskSpeed to error in WebKit based browsers. [Diego Perini]

* Refactor codebase to reduce file dependencies and allow more custom build variations. [jddalton]

* Cleanup codebase and optimize Element class. [jddalton, kangax]
    - Optimized Fuse.Util.$
    - Optimized insertableNodeTypes
    - Optimized Element.addMethods()
    - Fixed global var leaks in fusebox.js
    - Stoped wrapping `toString` and `valueOf` on sandboxed natives
    - Removed SafariMobile browser sniff from Feature('ELEMENT_SPECIFIC_EXTENSIONS')
    - Renamed Element._getContentFromAnonymousElement() to Element._getFragmentFromString()
    - Made Element.extend.refresh() private

* Rename Fuse.Browser to Fuse.Env to include other environments like Jaxer and Adobe AIR. [FuseJS LH #44] [jddalton, kangax]

* Reduce object property lookups by creating private variables and perform some code cleanup. [jddalton]
