@@ -1,3 +1,5 @@
+* Implemented Element.getDimensions() options argument. [FuseJS LH #6] [Joe Gornick, jddalton]
+
 * Stop Element#isVisible unit test from failing because IE6 doesn't respect 0px dimensions. [jddalton]
 
 * Fix bugs/typos/unit tests in the Fuse.Ajax classes. [Diego Perini, jddalton]
